--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
-title: "Publications"
+title: "Publications Stay tune for the future!"
 permalink: /publications/
 author_profile: true
 ---
