--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
-title: "Teaching"
+title: "Teaching Staty tune for the result!"
 permalink: /teaching/
 author_profile: true
 ---
